# R-TYPE

./: All.ps1  All.sh  AllLinux.sh  AllWindows.ps1  CMakeLists.txt  CleanWindows.ps1  CmakeLists.txt  Make.sh  MakeLinux.sh  MakeWindows.ps1  MoveDynLib.ps1  MoveDynLibs.sh  README.md  Setup.ps1  Setup.sh  SetupLinux.sh  SetupWindows.ps1  _a_monster_8cpp.html  _a_monster_8cpp__incl.map  _a_monster_8cpp__incl.md5  _a_monster_8cpp_source.html  _a_monster_8hpp.html  _a_monster_8hpp__dep__incl.map  _a_monster_8hpp__dep__incl.md5  _a_monster_8hpp__incl.map  _a_monster_8hpp__incl.md5  _a_monster_8hpp_source.html  _basic_monster_8cpp.html  _basic_monster_8cpp__incl.map  _basic_monster_8cpp__incl.md5  _basic_monster_8cpp_source.html  _basic_monster_8hpp.html  _basic_monster_8hpp__dep__incl.map  _basic_monster_8hpp__dep__incl.md5  _basic_monster_8hpp__incl.map  _basic_monster_8hpp__incl.md5  _basic_monster_8hpp_source.html  _buffer_8cpp.html  _buffer_8cpp__incl.map  _buffer_8cpp__incl.md5  (+1645 more)
.github/workflows/: Doxygen.yml  R-TYPE_Ubuntu.yml  R-TYPE_Windows.yml
Client/: main.cpp
Doc/: Doxyfile  UML.html  rfc.txt
DynamicLibraries/: AdvancedMonster.hpp  AdvencedMonster.hpp  BasicMonster.cpp  BasicMonster.hpp  IElement.hpp
ECS/: main.cpp
ECS/Entity/: Entity.cpp  Entity.hpp
ECS/Registry/: Registry.hpp
ECS/SparseArray/: SparseArray.hpp
ECS/components/: components.hpp
ECS/systems/: systems.cpp  systems.hpp
INetwork/: INetworkManager.hpp  IPacket.hpp  ITCPClient.hpp  ITCPServer.hpp  IUDPSocket.hpp
Items/: map.json
LibLoader/Unix/: DlLoaderUnix.cpp  DlLoaderUnix.hpp
LibLoader/Windows/: DlLoaderWindows.cpp  DlLoaderWindows.hpp
Script/: AllLinux.sh  AllWindows.ps1  AllWindowsDebug.ps1  CleanLinux.sh  CleanWindows.ps1  CreateDoxygenLinux.sh  CreateDoxygenWindows.ps1  MakeLinux.sh  MakeWindows.ps1  MoveDynLibs.ps1
Server/: PacketManager.cpp  PacketManager.hpp  main.cpp
Server/Element/: BasicMonster.hpp
Server/IPC/: IPC.cpp  IPC.hpp
Server/JsonWrapper/: IJsonWrapper.hpp  JsonWrapper.cpp  JsonWrapper.hpp
Server/Libs/: DlLoader.cpp  DlLoader.cppp  DlLoader.hpp  DlLoaderUnix.cpp  DlLoaderWindows.cpp  DlLoaderWindows.hpp  IElement.hpp  LibLoader.cpp  LibLoader.hpp
Server/Network/: NetworkManager.cpp  NetworkManager.hpp
Server/Network/NetworkManager/: NetworkManager.cpp  NetworkManager.hpp
Server/Network/Packet/: Packet.cpp  Packet.hpp
Server/Network/TCP/: tcpClient.cpp  tcpClient.hpp  tcpServer.cpp  tcpServer.hpp
Server/Network/UDP/: udpSocket.cpp  udpSocket.hpp
Server/Network/User/: tcpUser.cpp  tcpUser.hpp
Server/Player/: Player.cpp  Player.hpp
Server/PlayerData/: PlayerData.cpp  PlayerData.hpp
Server/Room/: Room.cpp  Room.hpp
Server/RoomData/: RoomData.cpp  RoomData.hpp
Server/RoomManager/: RoomManager.cpp  RoomManager.hpp
Shared/Buffer/: Buffer.cpp  Buffer.hpp
Shared/ECS/Registry/: Registry.cpp
Shared/ECS/SparseArray/: SparseArray.hpp
Shared/INetwork/: INetworkManager.hpp  IPacket.hpp  ITCPClient.hpp  ITCPServer.hpp  IUDPSocket.hpp
Shared/Lib/: ILib.hpp
Sources/Client/: Constants.hpp  Elements.cpp  Elements.hpp  IGraphicalLib.hpp  RtypeClient.cpp  RtypeClient.hpp  main.cpp  tamereuh.cpp  tamereuh.hpp
Sources/Client/Components/: ClickableComponent.hpp  ColorComponent.hpp  Components.hpp  CurrentRoom.hpp  CurrentSceneComponent.hpp  DirectionComponent.hpp  DrawableComponent.hpp  EntityTypeComponent.hpp  GraphicalLibComponent.hpp  HealthComponent.hpp  IndexComponent.hpp  KeyStateComponent.hpp  MouseStateComponent.hpp  MusicComponent.hpp  NetworkComponent.hpp  PlayerDataComponent.hpp  PlayerListComponent.hpp  PlayerWaitingComponent.hpp  PositionComponent.hpp  RectangleComponent.hpp  ReservedComponent.hpp  RoomDataComponent.hpp  RoomListComponent.hpp  SceneComponent.hpp  SizeComponent.hpp  SpriteComponent.hpp  StrengthComponent.hpp  TextComponent.hpp  TimeComponent.hpp  VelocityComponent.hpp  WeaponType.hpp  ZAxisComponent.hpp
Sources/Client/GraphicalLib/: Elements.cpp  Elements.hpp  GraphicalLib.cpp  GraphicalLib.hpp  IGraphicalLib.hpp
Sources/Client/NetworkManager/: NetworkManager.cpp  NetworkManager.hpp
Sources/Client/Systems/: Systems.hpp  UpdateEvent.cpp  UpdateEvent.hpp  UpdateGraph.cpp  UpdateGraph.hpp  UpdateNetwork.cpp  UpdateNetwork.hpp  UpdateTime.cpp  UpdateTime.hpp
Sources/Client/TCP/: TCPClient.cpp  TCPClient.hpp
Sources/Client/UDP/: UDPSocket.cpp  UDPSocket.hpp
Sources/Commons/Buffer/: Buffer.cpp  Buffer.hpp
Sources/Commons/INetwork/: INetworkManager.hpp  IPacket.hpp  ITCPClient.hpp  ITCPServer.hpp  IUDPSocket.hpp
Sources/Commons/Logger/: ILogger.hpp  Logger.cpp  Logger.hpp
Sources/Doc/: Protocol_PacketInterpreter-RoomManager  rfc.txt
Sources/DynamicLibraries/: AdvancedMonster.hpp  BalkanyMonster.cpp  BalkanyMonster.hpp  BasicMonster.cpp  BasicMonster.hpp
Sources/LibLoader/OSX/: DlLoaderOSX.cpp  DlLoaderOSX.hpp
Sources/LibLoader/Unix/: DlLoaderUnix.cpp  DlLoaderUnix.hpp
Sources/LibLoader/Windows/: DlLoaderWindows.cpp  DlLoaderWindows.hpp
Sources/Request/: Request.cpp  Request.hpp
Sources/Server/: Constants.hpp  RtypeServer.cpp  RtypeServer.hpp  main.cpp
Sources/Server/Component/: Components.hpp  FireFrequence.hpp  HealPoint.hpp  IndexComponent.hpp  Loot.hpp  NetworkComponent.hpp  Position.hpp  RequestComponent.hpp  SizeComponent.hpp  TimeComponent.hpp  TypesComponent.hpp  Velocity.hpp  Weapon.hpp  component.hpp
Sources/Server/Element/: AMonster.cpp  AMonster.hpp  Player.cpp  Player.hpp  Wall.cpp  Wall.hpp
Sources/Server/Game/: Game.cpp  Game.hpp
Sources/Server/Games/: Game.cpp  Game.hpp
Sources/Server/JsonWrapper/: IJsonWrapper.hpp  JsonWrapper.cpp  JsonWrapper.hpp
Sources/Server/Libs/: AMonster.cpp  AMonster.hpp  IElement.hpp  LibLoader.cpp  LibLoader.hpp
Sources/Server/PacketManager/: PacketManager.cpp  PacketManager.hpp
Sources/Server/Room/: Room.cpp  (+1 more)
bootstrap/: components.hpp  main.cpp  systems.cpp  systems.hpp
bootstrap/Entity/: Entity.cpp  Entity.hpp
bootstrap/Registry/: Registry.cpp  Registry.hpp
bootstrap/SparseArray/: SparseArray.cpp  SparseArray.hpp
docs/: CNAME
(+64 files in other folders)
